--- a/leopards.yaml
+++ b/leopards.yaml
@@ -2,14 +2,11 @@ team: Leopards
 
 manager: Luke
 
-<<<<<<< HEAD
-coach: Nicholas
-=======
 coach: Melissa
->>>>>>> 33e4096 (Edit Leopards)
 
 members:
 - Linda
 - William
 - David
 - Olivia
+- Evie
